--- a/app/src/main/res/layout/activity_status_layout.xml
+++ b/app/src/main/res/layout/activity_status_layout.xml
@@ -9,7 +9,7 @@
     app:layout_constraintGuide_percent="0.1">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/activityStatusCV1"
+        android:id="@+id/activityStatusCV"
         android:layout_width="350dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/activityStatusBGG"
+            android:id="@+id/activityStatusBG"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/rectangle">
@@ -78,7 +78,7 @@
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/activityStatusCV1">
+        app:layout_constraintTop_toBottomOf="@id/activityStatusCV">
 
         <TextView
             android:id="@+id/activityDetailsTV"
