--- a/app/src/main/res/layout/activity_caretaker_dashboard.xml
+++ b/app/src/main/res/layout/activity_caretaker_dashboard.xml
@@ -4,75 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity">
+    tools:context=".view.caretaker.CaretakerDashboardActivity">
 
-
-  <ImageButton
-      android:id="@+id/dailyReportButton"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="24dp"
-      android:layout_marginTop="48dp"
-      android:background="@color/white"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/patientDataButton"
-      app:srcCompat="@drawable/daily_report" />
-
-  <ImageButton
-      android:id="@+id/patientDataButton"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="24dp"
-      android:layout_marginTop="48dp"
-      android:background="@color/white"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/chooseDiffPatientTV"
-      app:srcCompat="@drawable/patient_data" />
-
-  <ImageButton
-      android:id="@+id/carePlanButton"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="48dp"
-      android:layout_marginEnd="24dp"
-      android:background="@color/white"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/chooseDiffPatientTV"
-      app:srcCompat="@drawable/care_plan" />
-
-  <ImageButton
-      android:id="@+id/healthDataButton"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="48dp"
-      android:background="@color/white"
-      app:layout_constraintEnd_toStartOf="@+id/carePlanButton"
-      app:layout_constraintStart_toEndOf="@+id/patientDataButton"
-      app:layout_constraintTop_toBottomOf="@+id/chooseDiffPatientTV"
-      app:srcCompat="@drawable/health_data" />
-
-  <ImageButton
-      android:id="@+id/viewActivityDataButton"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="48dp"
-      android:background="@color/white"
-      app:layout_constraintEnd_toStartOf="@+id/associateRadarButton"
-      app:layout_constraintHorizontal_bias="0.49"
-      app:layout_constraintStart_toEndOf="@+id/dailyReportButton"
-      app:layout_constraintTop_toBottomOf="@+id/healthDataButton"
-      app:srcCompat="@drawable/view_activity_data" />
-
-  <ImageButton
-      android:id="@+id/associateRadarButton"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="48dp"
-      android:layout_marginEnd="24dp"
-      android:background="@color/white"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/carePlanButton"
-      app:srcCompat="@drawable/associate_radar" />
 
   <androidx.cardview.widget.CardView
       android:id="@+id/medicalDiaganosticsHeaderCardView"
@@ -118,46 +51,33 @@
   </androidx.cardview.widget.CardView>
 
   <TextView
-      android:id="@+id/chooseDiffPatientTV"
+      android:id="@+id/selectAPatientTextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginTop="60dp"
-      android:text="@string/choose_diff_patient"
+      android:layout_marginTop="68dp"
+      android:onClick="onSelectAPatientClick"
+      android:text="Select a Patient"
       android:textColor="#2B86AC"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.503"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/medicalDiaganosticsHeaderCardView" />
 
-  <Button
-      android:id="@+id/medicalDiagnosticsButton"
+  <TextView
+      android:id="@+id/editCaretakerProfileTextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginTop="16dp"
-      android:onClick="onMedicalDiagnosticsClick"
-      android:text="Medical Diagnostics"
+      android:onClick="onCaretakerProfileEditClick"
+      android:text="Edit Caretaker Profile"
+      android:textColor="#2B86AC"
+      android:textStyle="bold"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.095"
+      app:layout_constraintHorizontal_bias="0.503"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/viewActivityDataButton" />
-
-  <Button
-      android:id="@+id/patientProfileUpdateButton"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:onClick="onPatientProfileUpdateClick"
-      android:text="Patient Profile Update"
-      app:layout_constraintStart_toStartOf="@+id/medicalDiagnosticsButton"
-      app:layout_constraintTop_toBottomOf="@+id/medicalDiagnosticsButton" />
-
-  <Button
-      android:id="@+id/navigationDrawerButton"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:onClick="onNavigationDrawerClick"
-      android:text="Side Menu"
-      app:layout_constraintStart_toStartOf="@+id/patientProfileUpdateButton"
-      app:layout_constraintTop_toBottomOf="@+id/patientProfileUpdateButton" />
+      app:layout_constraintTop_toBottomOf="@+id/selectAPatientTextView"
+      app:layout_constraintVertical_bias="0.214" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
