--- a/app/src/main/res/layout/fragment_daily_report.xml
+++ b/app/src/main/res/layout/fragment_daily_report.xml
@@ -9,7 +9,7 @@
     android:layout_height="wrap_content"
     android:fillViewport="true"
     android:background="@drawable/rounded_bg"
-    tools:context=".DailyReportFragment">
+    tools:context=".view.patient.dailyreport.DailyReportFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
