--- a/app/src/main/res/layout/fragment_past_medical_diagnostics.xml
+++ b/app/src/main/res/layout/fragment_past_medical_diagnostics.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".PastMedicalDiagnosticsFragment">
+    tools:context=".view.patient.patientdata.healthdetails.PastMedicalDiagnosticsFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
