--- a/app/src/main/res/layout/fragment_patient_profile_update2.xml
+++ b/app/src/main/res/layout/fragment_patient_profile_update2.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".PatientProfileUpdate2Fragment">
+    tools:context=".view.patient.patientdata.healthandwelfaredetails.PatientProfileUpdate2Fragment">
 
     <!-- TODO: Update blank fragment layout -->
 
