--- a/app/src/main/res/navigation/main.xml
+++ b/app/src/main/res/navigation/main.xml
@@ -6,12 +6,12 @@
     app:startDestination="@id/homeActivity3">
     <activity
         android:id="@+id/homeActivity3"
-        android:name="com.example.tg_patient_profile.HomeActivity"
+        android:name="com.example.tg_patient_profile.view.patient.PatientDashboardActivity"
         android:label="activity_home"
-        tools:layout="@layout/activity_home" />
+        tools:layout="@layout/activity_patient_dashboard" />
     <fragment
         android:id="@+id/currentMedicalDiagnosticsFragment"
-        android:name="com.example.tg_patient_profile.CurrentMedicalDiagnosticsFragment"
+        android:name="com.example.tg_patient_profile.view.patient.patientdata.healthdetails.CurrentMedicalDiagnosticsFragment"
         android:label="fragment_current_medical_diagnostics"
         tools:layout="@layout/fragment_current_medical_diagnostics" />
 </navigation>
