Added the  Unusual Activities and Suspecting Conditions pages, and linked them to the Notifications button of the Caretaker Dashboard

--- a/app/src/main/res/layout/activity_caretaker_dashboard.xml
+++ b/app/src/main/res/layout/activity_caretaker_dashboard.xml
@@ -47,6 +47,18 @@
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           app:srcCompat="@drawable/profile_avatar_women" />
+
+      <Button
+          android:id="@+id/caretakerDashboardNotificationsButton"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginEnd="16dp"
+          android:layout_marginBottom="68dp"
+          android:onClick="onNotificationsClick"
+          android:text="Test: Notifications"
+          android:textSize="10sp"
+          app:layout_constraintBottom_toBottomOf="@+id/medicalDiagnosticsEditImageView"
+          app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
   </androidx.cardview.widget.CardView>
 
