--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,25 +8,25 @@
     tools:context=".view.general.LoginActivity">
 
     <EditText
-        android:id="@+id/editTextPassword"
+        android:id="@+id/password"
         style="@style/Widget.AppCompat.EditText"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginBottom="24dp"
         android:background="@drawable/edit_text_border"
         android:ems="10"
-        android:hint="Enter password"
+        android:hint="   Enter password"
         android:inputType="textPassword"
         android:textColor="@android:color/darker_gray"
-        app:layout_constraintBottom_toTopOf="@+id/LoginButton"
+        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/cardView2"
-        app:layout_constraintVertical_bias="0.972" />
+        app:layout_constraintVertical_bias="0.968" />
 
     <Button
-        android:id="@+id/LoginButton"
+        android:id="@+id/loginBtn"
         android:layout_width="200dp"
         android:layout_height="60dp"
         android:layout_marginStart="128dp"
@@ -38,12 +38,12 @@
         android:textAllCaps="false"
         android:textColor="@color/white"
         app:cornerRadius="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/RegisterButton"
+        app:layout_constraintBottom_toTopOf="@+id/createText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/RegisterButton"
+        android:id="@+id/createText"
         android:layout_width="200dp"
         android:layout_height="60dp"
         android:layout_marginStart="128dp"
@@ -58,19 +58,42 @@
         app:layout_constraintBottom_toTopOf="@+id/imageView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+    <TextView
+        android:id="@+id/forgotPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Forgot Password ?"
+        android:textColor="#0598a5"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/progressBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/createText"
+        app:layout_constraintVertical_bias="0.19999999" />
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/createText"
+        app:layout_constraintVertical_bias="0.39" />
 
     <EditText
-        android:id="@+id/editTextUsername"
+        android:id="@+id/Email"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/edit_text_border"
         android:ems="10"
-        android:hint="Enter username"
+        android:hint="   Email"
         android:inputType="textPersonName"
         android:textColor="@android:color/darker_gray"
         android:textStyle="normal"
-        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
+        app:layout_constraintBottom_toTopOf="@+id/password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -81,7 +104,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
+        app:layout_constraintBottom_toTopOf="@+id/Email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/cardView2">
