--- a/app/src/main/res/layout/activity_confirm_incident.xml
+++ b/app/src/main/res/layout/activity_confirm_incident.xml
@@ -10,14 +10,14 @@
         android:id="@+id/signoutButton2"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="13dp"
         android:backgroundTint="@color/TG_blue"
         android:text="Sign Out"
         android:textColor="@color/white"
         android:textStyle="normal|bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.749"
+        app:layout_constraintHorizontal_bias="0.816"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.cardview.widget.CardView
@@ -92,34 +92,36 @@
         android:id="@+id/imageView9"
         android:layout_width="424dp"
         android:layout_height="82dp"
+        android:layout_marginTop="-25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.538"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/rectangle1"
-        tools:layout_editor_absoluteY="127dp" />
+        app:layout_constraintTop_toBottomOf="@id/headerCard"
+        app:srcCompat="@drawable/rectangle1" />
 
     <TextView
         android:id="@+id/textView30"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="26dp"
         android:fontFamily="@font/poppins_bold"
         android:text="!  Alert"
         android:textColor="@android:color/holo_red_light"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/imageView9"
-        tools:layout_editor_absoluteY="151dp" />
+        app:layout_constraintTop_toTopOf="@+id/imageView9" />
 
     <TextView
         android:id="@+id/careTakerName2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="296dp"
-        android:layout_marginBottom="556dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="36dp"
         android:text="Detected : 09:49 AM"
         android:textSize="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/textView30"
+        app:layout_constraintTop_toTopOf="@+id/imageView9" />
 
     <ImageView
         android:id="@+id/imageView22"
@@ -133,185 +135,165 @@
         android:id="@+id/imageView12"
         android:layout_width="316dp"
         android:layout_height="356dp"
-        app:srcCompat="@drawable/rectangle1689"
-        tools:layout_editor_absoluteX="47dp"
-        tools:layout_editor_absoluteY="201dp" />
-
-    <TextView
-        android:id="@+id/textView35"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="·   Usual bedtime: 10:30pm - 6:30am"
-        android:textSize="10dp"
-        tools:layout_editor_absoluteX="77dp"
-        tools:layout_editor_absoluteY="333dp" />
-
-    <TextView
-        android:id="@+id/textView37"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="·   Usual bedtime: 10:30pm - 6:30am"
-        android:textSize="10dp"
-        tools:layout_editor_absoluteX="77dp"
-        tools:layout_editor_absoluteY="357dp" />
-
-    <TextView
-        android:id="@+id/textView33"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="·   Resembling sleeping behaviour in an unusual time"
-        android:textSize="10dp"
-        tools:layout_editor_absoluteX="69dp"
-        tools:layout_editor_absoluteY="309dp" />
-
-    <TextView
-        android:id="@+id/textView39"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="·   Resembling sleeping behaviour in an unusual time"
-        android:textSize="10dp"
-        tools:layout_editor_absoluteX="69dp"
-        tools:layout_editor_absoluteY="381dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView9"
+        app:srcCompat="@drawable/rectangle1689" />
 
     <TextView
         android:id="@+id/textView32"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="·   Lying in an unsual place."
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="24dp"
+        android:text="@string/confirm_incident_text"
         android:textSize="10dp"
-        tools:layout_editor_absoluteX="69dp"
-        tools:layout_editor_absoluteY="274dp" />
+        app:layout_constraintStart_toStartOf="@+id/imageView12"
+        app:layout_constraintTop_toBottomOf="@+id/name3" />
 
     <TextView
         android:id="@+id/name3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="24dp"
         android:fontFamily="sans-serif-black"
         android:text="Benjamin Hogan is seemingly unconscious"
-        tools:layout_editor_absoluteX="69dp"
-        tools:layout_editor_absoluteY="231dp" />
+        app:layout_constraintStart_toStartOf="@+id/imageView12"
+        app:layout_constraintTop_toBottomOf="@+id/imageView9" />
 
     <TextView
         android:id="@+id/name4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="sans-serif-black"
-        android:text="Incident verfied by: "
-        tools:layout_editor_absoluteX="69dp"
-        tools:layout_editor_absoluteY="418dp" />
-
-    <TextView
-        android:id="@+id/name5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-black"
-        android:text="Georgia Blakeney"
-        android:textColor="@color/TG_blue"
-        tools:layout_editor_absoluteX="206dp"
-        tools:layout_editor_absoluteY="418dp" />
+        android:text="@string/confirm_incident_verified_by"
+        app:layout_constraintStart_toStartOf="@+id/imageView12"
+        app:layout_constraintTop_toBottomOf="@+id/textView32" />
 
     <TextView
         android:id="@+id/textView40"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="88dp"
+        android:layout_marginTop="16dp"
         android:text="Vertification time: 12:39 pm"
         android:textSize="10dp"
-        tools:layout_editor_absoluteX="139dp"
-        tools:layout_editor_absoluteY="450dp" />
-
-    <ImageView
-        android:id="@+id/imageView15"
-        android:layout_width="295dp"
-        android:layout_height="36dp"
-        app:srcCompat="@drawable/rectangle1693"
-        tools:layout_editor_absoluteX="57dp"
-        tools:layout_editor_absoluteY="479dp" />
+        app:layout_constraintStart_toStartOf="@+id/imageView12"
+        app:layout_constraintTop_toBottomOf="@+id/name4" />
 
     <TextView
         android:id="@+id/textView41"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/gray_border_rectangle"
+        android:paddingLeft="5dp"
+        android:paddingTop="5dp"
+        android:paddingRight="5dp"
+        android:paddingBottom="5dp"
         android:text="Patient is unconscious and bleeding from head"
         android:textSize="10sp"
-        tools:layout_editor_absoluteX="87dp"
-        tools:layout_editor_absoluteY="488dp" />
+        app:layout_constraintStart_toStartOf="@+id/imageView12"
+        app:layout_constraintTop_toBottomOf="@+id/textView40" />
 
     <ImageView
         android:id="@+id/imageView24"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/rectangle1692"
-        tools:layout_editor_absoluteX="29dp"
-        tools:layout_editor_absoluteY="557dp" />
+        android:layout_width="351dp"
+        android:layout_height="130dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imageView12"
+        app:srcCompat="@drawable/rectangle1692" />
 
     <TextView
         android:id="@+id/careTakerName4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginBottom="76dp"
+        android:layout_marginTop="10dp"
         android:text="Estimated time : 30 minutes"
         android:textSize="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
 
     <ImageView
         android:id="@+id/imageView26"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/rectangle1695"
-        tools:layout_editor_absoluteX="31dp"
-        tools:layout_editor_absoluteY="557dp" />
-
-    <TextView
-        android:id="@+id/name6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="530dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Call Ambulance"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView24"
-        app:layout_constraintTop_toBottomOf="@+id/imageView12" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imageView12"
+        app:srcCompat="@drawable/rectangle1695" />
 
-    <ImageView
-        android:id="@+id/imageView27"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/rectangle1540"
-        tools:layout_editor_absoluteX="47dp"
-        tools:layout_editor_absoluteY="602dp" />
-
-    <TextView
-        android:id="@+id/textView42"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="45dp"
-        android:text="Royal Melbourne Ambulance Service"
-        android:textSize="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView27"
-        app:layout_constraintTop_toBottomOf="@+id/imageView26"
-        tools:layout_editor_absoluteX="57dp" />
 
     <ImageButton
         android:id="@+id/imageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView24"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView12"
+        android:layout_width="35dp"
+        android:layout_height="28dp"
+        android:layout_marginStart="12dp"
+        android:background="#E7EAEB"
+        app:layout_constraintStart_toStartOf="@+id/imageView26"
+        app:layout_constraintTop_toTopOf="@+id/imageView24"
         app:srcCompat="@drawable/checkedcheckbox" />
 
     <Button
         android:id="@+id/button8"
         android:layout_width="136dp"
         android:layout_height="45dp"
+        android:layout_marginBottom="13dp"
         android:onClick="onConfirmIncidentCancelClick"
         android:text="Cancel"
-        tools:layout_editor_absoluteX="50dp"
-        tools:layout_editor_absoluteY="670dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.174"
+        app:layout_constraintStart_toStartOf="parent" />
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:text="Call Ambulance"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/imageButton"
+        app:layout_constraintTop_toTopOf="@+id/imageView24" />
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="330dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="40dp"
+        android:layout_weight=".28"
+        android:background="@drawable/gray_border_rectangle"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="@+id/imageView24"
+        app:layout_constraintTop_toTopOf="@+id/imageView24">
+
+        <Spinner
+            android:id="@+id/hospitalSpinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:background="@android:color/transparent"
+            android:gravity="center"
+            android:spinnerMode="dropdown" />
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:src="@drawable/spinner_drop" />
+
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
