--- a/app/src/main/res/layout/update_popup.xml
+++ b/app/src/main/res/layout/update_popup.xml
@@ -55,23 +55,25 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:text="Date of Birth"/>
+
     <EditText
-        android:layout_width="match_parent"
+        android:id="@+id/txtDoB"
+        android:layout_width="325dp"
         android:layout_height="35dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/rounded"
-        android:gravity="center"
-        android:id="@+id/txtDoB"/>
+        android:gravity="center" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="299dp"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="20sp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        android:text="Phone"/>
+        android:gravity="center"
+        android:text="Phone"
+        android:textSize="20sp" />
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="35dp"
