--- a/app/src/main/res/layout/activity_patient_page_update.xml
+++ b/app/src/main/res/layout/activity_patient_page_update.xml
@@ -48,17 +48,6 @@
 
                 />
 
-            <ImageView
-                android:id="@+id/medicalDiagnosticsEditImageView"
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                app:srcCompat="@drawable/profile_avatar_women"
-                tools:layout_editor_absoluteX="160dp"
-                tools:layout_editor_absoluteY="137dp" />
-
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -87,6 +76,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
+
+        <ImageView
+            android:id="@+id/medicalDiagnosticsEditImageView"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            app:srcCompat="@drawable/profile_avatar_women" />
 
         <TextView
             android:id="@+id/txtFirstName"
