--- a/app/src/main/res/drawable/rectangle_drop_shadow.xml
+++ b/app/src/main/res/drawable/rectangle_drop_shadow.xml
@@ -12,11 +12,11 @@
     </item>
 
     <!-- White Top color -->
-    <item android:bottom="3px">
+    <item android:bottom="5px">
 
         <shape  android:shape="rectangle">
 
-            <solid android:color="#FFFFFF" />
+            <solid android:color="#F5F5F5" />
             <corners android:radius="7dp" />
 
 
