--- a/app/src/main/res/layout/activity_caretaker_dashboard.xml
+++ b/app/src/main/res/layout/activity_caretaker_dashboard.xml
@@ -59,6 +59,19 @@
           android:textSize="10sp"
           app:layout_constraintBottom_toBottomOf="@+id/medicalDiagnosticsEditImageView"
           app:layout_constraintEnd_toEndOf="parent" />
+
+      <Button
+          android:id="@+id/button6"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="20dp"
+          android:onClick="onHealthDataClick"
+          android:text="TEST: health data"
+          android:textSize="10sp"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintHorizontal_bias="0.922"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/caretakerDashboardNotificationsButton" />
     </androidx.constraintlayout.widget.ConstraintLayout>
   </androidx.cardview.widget.CardView>
 
