--- a/app/src/main/res/layout/activity_patient_page_new.xml
+++ b/app/src/main/res/layout/activity_patient_page_new.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/L1111"
+    android:background="@drawable/patient_profile_bg"
     tools:context=".view.patient.Patient_Page">
 
     <androidx.constraintlayout.widget.ConstraintLayout
